# BudtboyV1

./: .env.example  .gitignore  .replit  CHANGELOG.md  DEPLOYMENT.md  MIGRATION_STEPS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  add_user_columns.py  admin_cookies.txt  budtboy_preview.db  budtboy_preview.db.bak-20250913-082129  cookies.txt  create_admin.py  create_initial_user.py  create_postgres_db.sql  database_queries.sql  debug_db_schema.py  fallback_cookies.txt  initialize_sample_data.py  main.py  migrate_data.py  pyproject.toml  replit.md  requirements.txt  reset_admin_password.py  reset_password.py  reset_user_password.py  run.py  setup_postgres.bat  sqlite_cookies.txt  test_cookies.txt  test_user_reviews.py
.claude/: settings.local.json
app/: __init__.py
attached_assets/: Breeder_1753531431079.txt  Pasted--CSS--1757593265006_1757593265006.txt  Pasted--Replit-Health-Check--1757724463806_1757724463807.txt  Pasted--templates-bud-report-html-style-CSS--1757585908545_1757585908545.txt  Pasted-Packager-files-Config-files-Chats-Archived-chat-problem-troubleshooting-technical-issue-21-hour-1753621536304_1753621536307.txt  Strain Name_1753528525608.txt
config/: config.py
templates/: activities.html  activity.html  activity_join.html  activity_participants.html  add_buds.html  add_review.html  admin.html  admin_activities.html  admin_buds.html  admin_login.html  admin_reviews.html  admin_settings.html  admin_settings_auth_images.html  admin_settings_content.html  admin_settings_general.html  admin_settings_maintenance.html  admin_settings_security.html  auth.html  (+17 more)
(+36 files in other folders)
