[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask-mail>=0.10.0",
    "flask>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
    "bcrypt>=4.0.1",
    "google-auth-oauthlib>=1.2.2",
    "google-auth>=2.40.3",
    "requests>=2.32.5",
]
